# browser-use-annotator

./: .gitignore  README.md  app.py  pyproject.toml
bua/: app.py  browser.py  constants.py  replay_app.py
bua/gradio/: anno_app.py  constants.py  replay_app.py  utils.py
bua/gradio/components/: handlers.py  logs_panel.py  main_panel.py  session_utils.py  task_panel.py
bua/interface/: browser.py
bua/llm/: prompts.py  utils.py
static/: theme_taithrah_minimal.json
